# AudioExplorer

./: CMakeLists.txt  README.md  ResCompiler.cpp
res/: appicon.sh
src/: AdvancedSearchDialog.cpp  AdvancedSearchDialog.h  AudioLibrary.cpp  AudioLibrary.h  AudioLibraryModel.cpp  AudioLibraryModel.h  AudioLibraryView.cpp  AudioLibraryView.h  DetailsPane.cpp  DetailsPane.h  ImageViewWindow.cpp  ImageViewWindow.h  MainWindow.cpp  MainWindow.h  Settings.cpp  Settings.h  SettingsEditorWindow.cpp  SettingsEditorWindow.h  ThreadSafeAudioLibrary.cpp  ThreadSafeAudioLibrary.h  TrackInfoReader.cpp  TrackInfoReader.h  main.cpp  project_version.h  project_version.rc  resource_helpers.cpp  resource_helpers.h  static_plugin_include.cpp
test/: AudioLibrarySaveAndLoad.cpp  AudioLibraryTrackCleanup.cpp  AudioLibraryViews.cpp  AudioLibraryViews.txt  ThreadSafeAudioLibrary.cpp  TrackInfo.cpp  VisualIndexRestoration.cpp  test.cpp  tools.h
test/data/: noise.ape  noise.m4a  noise.wma
translations/: AudioExplorer_de.ts
